# Dockerized-MixFormerV2

./: CMakeLists.txt  Dockerfile  README.md  main.cpp  python_client.py
mixformerv2/tracking/: app.py
